Timezones         Bug: won't allow you to save a different time zone than the one you are currently in. For example, I'm currently on the east coast, and when I sign up, it defaults to Easter Standard Time, which is good.  However, since I live in CA, I change it to PST, save, and when the page refreshes, it's back to EST.         Bug: When signing up on the out of the Pacific time zone, the meal times should still default to 9am, 12pm and 6pm (on east coat it defaulted to 12pm / 3pm / 9pm which is the correct meal times +3 hours)         Shorten time zones dropdown options from long names to PST, MST, CST and EST.  Remove full name and UTC -x.  Remove also the "daylight" options and just have it assume that it's daylight savings time.     Forgot password link isn't working.         Probably because it's from FE users.  This should probably just resend the password sent in the original text.         --Remember: the url for forgot-password is: http://thinkthin.ly.com/reset-password     MMS confirmation message         Bug: There is a ". ." after "Well done".         Update "Thinkthinly" to "ThinkThinly" with a capital T.     User Settings form         Add a span with some class that I can style around the notification message (see screenshot below): It's now wrapped within div class="updated"         Re-order settings form in the order below.  I can create the divider lines (------) with css if you give me a way to do this - i.e. field groups or IDs for the form elements.             Phone (remove)             Breakfast (change "select" to "disable" and make only options for every 15 minutes consistent for entire day)             Lunch (change "select" to "disable" and make only options for every 15 minutes consistent for entire day)             Dinner (change "select" to "disable" and make only options for every 15 minutes consistent for entire day)
Breakfast, lunch and dinner time
00:00am,00:15am,00:30am,00:45am,01:00am,01:15am,01:30am,01:45am,02:00am,02:15am,02:30

--- a/wp-content/themes/arcade-basic/style.css
+++ b/wp-content/themes/arcade-basic/style.css
@@ -31,7 +31,6 @@ figcaption,
 figure,
 footer,
 header,
-hgroup,
 main,
 nav,
 section,
@@ -257,7 +256,7 @@ th {
 
 
 #article.page nav.navbar{
-  background-color:none;
+  /*background-color:none;*/
   box-shadow: none;
   padding:0px!important;
 }
@@ -361,7 +360,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eeeeee; }
+  border-top: 1px solid #000; }
 
 .sr-only {
   position: absolute;
@@ -5290,16 +5289,14 @@ body.page-template-default .pure-form-aligned .pure-control-group > input, body.
 
   }
 
-  
-}
 
 .home .main-navigation li#menu-item-382,
 .page-id-12 .ewd-feup-edit-4,
 .page-id-12 .ewd-feup-register-input-4,
 .page-id-12 label[for=Username],
-.page-id-12 input[type=text]{
-  display:none;
-}
+/*.page-id-12 input[type=text]{*/
+  /*display:none;*/
+/*}*/
 
 
 #user-form-container p{
@@ -5311,4 +5308,7 @@ body.page-template-default .pure-form-aligned .pure-control-group > input, body.
   color:#FFD500;
   padding:20px 0;
 }
-
+.terms_cond{
+    color: #fff;
+    margin-top: 12px;
+}
